<resources>
    <string name="app_name">Интерфейс</string>

    <string name="tab_product">Продукты</string>
    <string name="tab_search">Поиск</string>
    <string name="tab_profile">Профиль</string>


    <string name="label_search">Что сегодня готовим?</string>
    <string name="label_product">Измените список продуктов</string>
    <string name="label_profile">Профиль</string>
    <string name="label_filter">Фильтры</string>
    <string name="label_recipe">Рецепт</string>

    <string name="stub">Ошибка запроса!</string>

    <string name="search_placeholder">Поиск по продуктам</string>
    <string name="search_button">Подобрать блюдо!</string>

    <string name="description_profile">Последние рецепты</string>

    <string name="products">Ингредиенты:</string>
</resources>